# shixyqd

./: Final Project Submission.ipynb  README.md
Crypto Currency Project/: Project Proposal.ipynb  Project.ipynb  README
Crypto Currency Project/get_exchange_prices/: CHANGELOG.md  CONTRIBUTING.md  Final Project Submission.ipynb  LICENSE  README.md  pyproject.toml
Crypto Currency Project/get_exchange_prices/docs/: Makefile  conf.py  example.ipynb  make.bat
Crypto Currency Project/get_exchange_prices/src/: __init__.py  get_exchange_prices.py
Crypto Currency Project/get_exchange_prices/tests/: test_get_exchange_prices.py
