[tool.poetry]
name = "get_exchange_prices"
version = "0.1.0"
description = "This function makes a request to an external API CryptingUp, fetches data for a given cryptocurrency asset in the available exchanges, "
authors = ["Xinyi Shi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"
pytest = "^7.2.0"
sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
